platforms/drm: remove the dpms filter when outputs are added

When the dpms filter is active and an output is hotunplugged, or
is momentarily detected as hotunplugged, adding a new output should
remove the dpms filter again.

BUG: 446699
FIXED-IN: 5.23.5